Fixing centering of navlinks on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,32 +5,37 @@
   transform: translate(-50%, -50%);
   max-width: 100%;
   white-space: nowrap;
-  font-size:250%
+  font-size:250%;
+  justify-content: center;  
 }
 
 .mainflex {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   background-color: transparent;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  justify-content: center;
 }
 
 #nav-links {
-  margin: none;
+  margin: auto;
   align-items: center;
+  justify-content: center;
 }
 
 ul {
+  display: inline-flex;
   padding-inline-start: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 ul li {
-  display: inline-block;
-  padding: 5px 15px;
-  white-space: nowrap;
+  display: inline-flex;
+  padding: 15px;
 }
 
 img:hover {
